change z-index of ticker component to avoid overlappings with charges component controls

--- a/src/app/feed/feed.component.css
+++ b/src/app/feed/feed.component.css
@@ -10,7 +10,7 @@ aside {
     display: block;
     padding-bottom: 40px;
     transition: width .2s, height .2s;
-    z-index: 1;
+    z-index: 2;
     border-left: 1px solid #ebebeb;
 }
 
